# spark_playground

./: .gitignore  .python-version  README.md  pyproject.toml  requirements-dev.txt
 src/: conftest.py
 src/test/: conftest.py
scripts/: boostrap_dev.zsh  start-podman.sh  stop-podman.sh
src/: conftest.py
src/app/: __init__.py
