[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomo-hatch"
version = "0.1.0"
description = "A sample project using hatchling"
authors = [{ name = "Michael Penhallegon", email = "mike@hematite.tech" }]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "dynaconf",
    "psycopg[binary] >= 3.0",
]
[options.packages.find]
where = "src"

[options.entry_points]
console_scripts = [
    "pomo-hatch-server = pomo_hatch.main:server",
    "pomo-hatch-start = pomo_hatch.main:start",
    "pomo-hatch-stop = pomo_hatch.main:stop",
    "pomo-hatch-status = pomo_hatch.main:status",
    "pomo-hatch-shutdown = pomo_hatch.main:shutdown",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C", "B", 
    "D1", "D201", "D202", "D205", "D210", "D212", "D4",
    "E4", "E7", "E9", 
    "F", "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "^/s*/././."
]
exclude_also = [
    "if __name__ == .__main__."
]
