[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomo-hatch"
version = "0.1.0"
description = "A sample project using hatchling"
authors = [{ name = "Michael Penhallegon", email = "mike@hematite.tech" }]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "dynaconf"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C", "B", 
    "D1", "D201", "D202", "D205", "D210", "D212", "D4",
    "E4", "E7", "E9", 
    "F", "W",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "^/s*/././."
]
exclude_also = [
    "if __name__ == .__main__."
]
